test: lint check error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidBoilerplate</string>
+    <string name="not-use">not use string</string>
 </resources>
